# radio

./: .env  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
API/: models.py  serializers.py  tasks.py  urls.py  views.py
API/management/commands/: parsecountry.py  parsers.py  parsestations.py  updatecountry.py  updategenres.py
API/migrations/: 0001_initial.py  0002_genre_alter_state_state_name.py  0003_station.py  0004_country_link.py  0005_country_is_parsed.py  0006_links_remove_country_is_parsed.py  0007_remove_country_link.py  0007_remove_station_genres_station_genres.py  0008_alter_state_state_name.py  0008_remove_station_genres_station_genres.py  0009_station_country_station_state.py  0010_remove_station_country_remove_station_state.py  0011_station_country_station_state.py  0012_like.py
compose/local/django/: Dockerfile
compose/local/django/celery/flower/: start
radioAPI/: asgi.py  celery.py  settings.py  urls.py  wait_for_db.py  wsgi.py
